deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-demo
  template:
    metadata:
      name: prometheus-demo
      labels:
        app: prometheus-demo
    spec:
      containers:
      - image: registry.cn-shanghai.aliyuncs.com/samzhang/prometheus-demo:0.0.1
        name: main
