deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-demo
  annotations:
    prometheus.io/scrape: "true"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: prometheus-demo
