deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-demo
spec:
  rules:
  - host: prometheusdemo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-demo
          servicePort: 80
